// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`swapRequested > creates a new swap request (DEPOSIT_CHANNEL 170) 1`] = `
{
  "ccmDepositReceivedBlockIndex": "87-13",
  "ccmGasBudget": "2",
  "ccmMessage": "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000003f7a400000000000000000000000000000000000000000000000000000000000000074761735465737400000000000000000000000000000000000000000000000000",
  "chunkIntervalBlocks": 2,
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": "4999922",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2024-08-23T13:13:12.002Z,
  "depositFinalisedBlockIndex": "87-13",
  "depositTransactionRef": null,
  "destAddress": "0xa51c1fc2f0d1a1b8494ed1fe312d7c3a78ed91c0",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 2n,
  "numberOfChunks": 10,
  "originType": "DEPOSIT_CHANNEL",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "CCM",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": Any<BigInt>,
  "swapInputAmount": "4999922",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequested > creates a new swap request (DEPOSIT_CHANNEL) 1`] = `
{
  "beneficiaries": [],
  "ccmDepositReceivedBlockIndex": "87-13",
  "ccmGasBudget": "2",
  "ccmMessage": "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000003f7a400000000000000000000000000000000000000000000000000000000000000074761735465737400000000000000000000000000000000000000000000000000",
  "chunkIntervalBlocks": 2,
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": "4999922",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2024-08-23T13:13:12.002Z,
  "depositFinalisedBlockIndex": "87-13",
  "depositTransactionRef": null,
  "destAddress": "0xa51c1fc2f0d1a1b8494ed1fe312d7c3a78ed91c0",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 2n,
  "numberOfChunks": 10,
  "originType": "DEPOSIT_CHANNEL",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "CCM",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": Any<BigInt>,
  "swapInputAmount": "4999922",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequested > creates a new swap request (INGRESS_EGRESS_FEE) 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "chunkIntervalBlocks": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": null,
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": null,
  "destAddress": null,
  "destAsset": "ArbEth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 8n,
  "numberOfChunks": null,
  "originType": "INTERNAL",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "INGRESS_EGRESS_FEE",
  "srcAddress": null,
  "srcAsset": "ArbUsdc",
  "swapDepositChannelId": null,
  "swapInputAmount": "450800",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequested > creates a new swap request (LEGACY VAULT 180) 1`] = `
{
  "beneficiaries": [],
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "chunkIntervalBlocks": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": "500000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": "0x9c617e12f6ddd5c7cff2236b32970bc2bd168799c90f907269348e6ca8c7be18",
  "destAddress": "0x16988558ad8ef084dbe0016c9ffdae908e480621",
  "destAsset": "Usdt",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 162n,
  "numberOfChunks": null,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "ArbUsdc",
  "swapDepositChannelId": null,
  "swapInputAmount": "500000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequested > creates a new swap request (VAULT 180) 1`] = `
{
  "beneficiaries": [
    {
      "account": "cFM8kRvLBXagj6ZXvrt7wCM4jGmHvb5842jTtXXg3mRHjrvKy",
      "channelId": null,
      "commissionBps": 100,
      "id": Any<BigInt>,
      "swapRequestId": Any<BigInt>,
      "type": "SUBMITTER",
    },
    {
      "account": "cFMYYJ9F1r1pRo3NBbnQDVRVRwY9tYem39gcfKZddPjvfsFfH",
      "channelId": null,
      "commissionBps": 150,
      "id": Any<BigInt>,
      "swapRequestId": Any<BigInt>,
      "type": "AFFILIATE",
    },
  ],
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "chunkIntervalBlocks": 2,
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": "10000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": "2f1e9acbef4360ad0063ad7d3f7f6527a5caccbbee20097f4e045c1482a67aad",
  "destAddress": "0xb2806f8993e01460bc2f6e50fab466b5525dbe3a",
  "destAsset": "Flip",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 1n,
  "numberOfChunks": 1,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": null,
  "swapInputAmount": "10000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 250,
}
`;

exports[`swapRequested > creates a new swap request (VAULT) 1`] = `
{
  "beneficiaries": [],
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "chunkIntervalBlocks": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": "5000000000000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": "0x76628bde2b6d66c84104d3721456edde968b8bafb347f63fbb67816546131204",
  "destAddress": "0x720bb1f2f46ed499dc328cbe43c54a03d710cd03",
  "destAsset": "Flip",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 62n,
  "numberOfChunks": null,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "ArbEth",
  "swapDepositChannelId": null,
  "swapInputAmount": "5000000000000000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequested > creates a new swap request and gets the solana tx ref (VAULT 180) 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "chunkIntervalBlocks": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": "100000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": "4tpsjS1WFhamaRBfYdEHdadHFs58Ppq8jrv26xwkquVjA5BfP7wGjBbwVrDCECDpxRgfCnqXfCK4way9BPutAyRS",
  "destAddress": "0xf4640a7c3c20969f40c7e2b62d8a5e4f19e6c106",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 158n,
  "numberOfChunks": null,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Sol",
  "swapDepositChannelId": null,
  "swapInputAmount": "100000000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 0,
}
`;
